--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -16,6 +16,7 @@
         android:background="@drawable/top_rounded_blue">
 
         <TextView
+            android:id="@+id/add_money_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight=".1"
@@ -260,6 +261,7 @@
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/add_money_amount_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
