--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F1F5F8"
+        android:layout_marginBottom="?actionBarSize"
         tools:context=".fragments.WalletAccountFragment">
 
         <LinearLayout
@@ -1434,18 +1435,18 @@
                                     android:background="#F9F7FE" />
 
                             </RelativeLayout>
+
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/layout_customer_support_menu"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="5dp"
+                                android:background="@drawable/rounded_gray_background"
                                 android:paddingStart="5dp"
                                 android:paddingTop="8dp"
                                 android:paddingEnd="5dp"
                                 android:paddingBottom="10dp"
-                                android:background="@drawable/rounded_gray_background"
                                 android:visibility="gone">
-
 
 
                                 <LinearLayout
@@ -1469,26 +1470,27 @@
                                         android:gravity="center_vertical"
                                         android:paddingLeft="@dimen/dimen_10dp"
                                         android:text="Toll Free Number"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/textColor" />
-
+                                        android:textColor="@color/textColor"
+                                        android:textStyle="bold" />
 
 
                                 </LinearLayout>
+
                                 <View
                                     android:id="@+id/view9"
                                     android:layout_width="match_parent"
                                     android:layout_height="1dp"
-                                    app:layout_constraintTop_toBottomOf="@id/layout_toll_free"
-                                    app:layout_constraintBottom_toTopOf="@id/layout_email"
                                     android:layout_marginTop="5dp"
-                                    android:background="#F9F7FE" />
+                                    android:background="#F9F7FE"
+                                    app:layout_constraintBottom_toTopOf="@id/layout_email"
+                                    app:layout_constraintTop_toBottomOf="@id/layout_toll_free" />
+
                                 <LinearLayout
                                     android:id="@+id/layout_email"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="8dp"
                                     android:layout_marginStart="5dp"
+                                    android:layout_marginTop="8dp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toBottomOf="@id/view9">
@@ -1505,24 +1507,26 @@
                                         android:gravity="center_vertical"
                                         android:paddingLeft="@dimen/dimen_10dp"
                                         android:text="Email"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/textColor" />
+                                        android:textColor="@color/textColor"
+                                        android:textStyle="bold" />
 
                                 </LinearLayout>
+
                                 <View
                                     android:id="@+id/view10"
                                     android:layout_width="match_parent"
                                     android:layout_height="1dp"
-                                    app:layout_constraintTop_toBottomOf="@id/layout_email"
-                                    app:layout_constraintBottom_toTopOf="@id/layout_live_chat"
                                     android:layout_marginTop="5dp"
-                                    android:background="#F9F7FE" />
+                                    android:background="#F9F7FE"
+                                    app:layout_constraintBottom_toTopOf="@id/layout_live_chat"
+                                    app:layout_constraintTop_toBottomOf="@id/layout_email" />
+
                                 <LinearLayout
                                     android:id="@+id/layout_live_chat"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="8dp"
                                     android:layout_marginStart="5dp"
+                                    android:layout_marginTop="8dp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toBottomOf="@id/view10">
@@ -1539,13 +1543,14 @@
                                         android:gravity="center_vertical"
                                         android:paddingLeft="@dimen/dimen_10dp"
                                         android:text="Live Chat"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/textColor" />
+                                        android:textColor="@color/textColor"
+                                        android:textStyle="bold" />
 
                                 </LinearLayout>
 
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
+
                             <RelativeLayout
                                 android:id="@+id/share_app"
                                 android:layout_width="match_parent"
