removed buy in card list fragment and added crt bdge value for ctegory products

--- a/app/src/main/res/layout/payment_card.xml
+++ b/app/src/main/res/layout/payment_card.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.12" />
+            app:layout_constraintGuide_begin="23dp" />
 
 
 
@@ -140,9 +140,9 @@
             android:text="01/01"
             android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toTopOf="@+id/guideline7"
-            app:layout_constraintEnd_toStartOf="@+id/guideline4"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="@+id/guideline6" />
+            app:layout_constraintTop_toTopOf="@+id/guideline6"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
         <androidx.constraintlayout.widget.Guideline
