--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -318,7 +318,8 @@
                 android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_corners_button"
-                android:gravity="right">
+                android:gravity="right"
+                android:visibility="visible">
 
                 <Button
                     android:id="@+id/button_add_money"
@@ -347,7 +348,43 @@
                 </ImageView>
 
             </FrameLayout>
+            <LinearLayout
+                android:id="@+id/edit_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:visibility="gone">
 
+
+
+                <Button
+                    android:id="@+id/delete_card"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/round_button_red"
+                    android:text="@string/bt_delete"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:drawableEnd="@drawable/ic_right_chevron" />
+                <Button
+                    android:id="@+id/edit_card"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/round_button_dark_green"
+                    android:text="Update"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:drawableEnd="@drawable/ic_right_chevron"/>
+            </LinearLayout>
 
         </LinearLayout>
 
