--- a/app/src/main/res/layout/dialog_agent_customer_funds_transfer_details.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_funds_transfer_details.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/dialog_background"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    tools:keep="@layout/dialog_agent_customer_funds_transfer_details">
 
     <ScrollView
         android:layout_width="match_parent"
