--- a/app/src/main/res/menu/bottom_navigation_shop_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_shop_menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:keep="@menu/bottom_navigation_shop_menu">
     <item
         android:id="@+id/walletProductsFragment"
         android:enabled="true"
