Edited add visa card details

--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -34,6 +34,9 @@
 
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -139,6 +142,7 @@
                     android:inputType="text"/>
 
             </LinearLayout>
+
 
 
             <LinearLayout
@@ -388,5 +392,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
+    </ScrollView>
 </LinearLayout>
