--- a/app/src/main/res/drawable/ic_business_location.xml
+++ b/app/src/main/res/drawable/ic_business_location.xml
@@ -5,22 +5,23 @@
     android:viewportHeight="511.79">
   <path
       android:pathData="m511.748,361.3v150.49h-85.531l-30.13,-75.245 30.13,-75.245z"
-      android:fillColor="#00429c"/>
+      android:fillColor="@color/colorPrimary"/>
   <path
       android:pathData="m426.217,361.3v150.49h-84.94l-22.232,-72.66 22.232,-77.83z"
-      android:fillColor="#005fe0"/>
+      android:fillColor="#88a8d8"/>
   <path
       android:pathData="m170.807,361.3 l31.302,75.245 -31.302,75.245h-85.53l-30.13,-75.245 30.13,-75.245z"
-      android:fillColor="#00429c"/>
+      android:fillColor="@color/colorPrimary"
+      />
   <path
       android:pathData="m0.043,361.3h84.94v150.49h-84.94z"
-      android:fillColor="#005fe0"/>
+      android:fillColor="#88a8d8"/>
   <path
       android:pathData="m341.278,301.62v210.17h-85.531l-30.13,-105.085 30.13,-105.085z"
-      android:fillColor="#00429c"/>
+      android:fillColor="@color/colorPrimary"/>
   <path
       android:pathData="m170.807,301.62h84.94v210.17h-84.94z"
-      android:fillColor="#005fe0"/>
+      android:fillColor="#88a8d8"/>
   <path
       android:pathData="m340.368,84.62c0,9.96 -1.72,19.71 -5.11,29l-0.23,0.62 -5.48,11.69 -73.79,157.42 -0.01,-0.02 -42.31,-163.349 42.31,-119.981c46.66,0 84.62,37.96 84.62,84.62z"
       android:fillColor="#cf3b00"/>
