--- a/app/src/main/res/drawable/ic_registration_no.xml
+++ b/app/src/main/res/drawable/ic_registration_no.xml
@@ -20,10 +20,10 @@
       android:fillColor="#707070"/>
   <path
       android:pathData="m192.829,182.018h55.574v42.876h-55.574z"
-      android:fillColor="#005fe0"/>
+      android:fillColor="#88a8d8"/>
   <path
       android:pathData="m229.903,182.018h18.5v42.876h-18.5z"
-      android:fillColor="#00429c"/>
+      android:fillColor="@color/colorPrimary"/>
   <path
       android:pathData="m55.364,66.4v36.174l7.12,-8.353a8.3,8.3 0,0 1,11.665 -0.93,8.3 8.3,0 0,1 0.93,11.665l-16.2,19s4.834,20.4 -7.909,32.058h-36.023l3.194,-43.827c0.383,-4.048 2.879,-7.471 5.417,-10.3z"
       android:fillColor="#f8af23"/>
@@ -44,10 +44,10 @@
       android:fillColor="#9e9e9e"/>
   <path
       android:pathData="m63.171,224.894l-55.574,-0l-0,-42.876l55.574,-0z"
-      android:fillColor="#005fe0"/>
+      android:fillColor="#88a8d8"/>
   <path
       android:pathData="m7.597,182.018h18.5v42.876h-18.5z"
-      android:fillColor="#00429c"/>
+      android:fillColor="@color/colorPrimary"/>
   <path
       android:pathData="M89.881,48.879m-8.974,0a8.974,8.974 0,1 1,17.948 0a8.974,8.974 0,1 1,-17.948 0"
       android:fillColor="#9e9e9e"/>
