--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -107,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:fontFamily="@font/josefin_sans"
-                        android:text="Mobile Number *"
+                        android:text="Mobile Number"
                         android:textSize="16sp"
                         android:layout_marginBottom="5dp"/>
 
